2008-10-20  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp : Removed "set! to unbound variable" check on ASSIGN_GLOBAL for psyntax.

        * library.scm (call-with-port): Added call-with-port.

        * PortProcedures.cpp (getLineEx): Added get-line.

2008-10-19  higepon  <higepon@users.sourceforge.jp>

        * ByteVectorProcedures.cpp : Added utf16->string and string->utf16.

        * ByteVectorProcedures.cpp : Added utf32->string and string->utf32.

        * UTF16Codec.h : Added.

        * UTF16Codec.cpp : Added.

        * UTF32Codec.h : Added.

        * UTF32Codec.cpp : Added.

        * ByteVectorProcedures.cpp : Added string->utf8.

2008-10-18  higepon  <higepon@users.sourceforge.jp>

        * ErrorProcedures.cpp (throwIOError): Added for Codec Error.

        * Added: bytevector->string and string->bytevector.

2008-10-16  higepon  <higepon@users.sourceforge.jp>

        * Added: bytevector-u64-native-ref, bytevector-s64-native-ref
               , bytevector-u64-native-set! ,bytevector-s64-native-set!
               , bytevector-u64-ref, bytevector-s64-ref
               , bytevector-u64-set! and bytevector-s64-set!.

        * Added: bytevector-u32-native-ref, bytevector-s32-native-ref
               , bytevector-u32-native-set! ,bytevector-s32-native-set!
               , bytevector-u32-ref, bytevector-s32-ref
               , bytevector-u32-set! and bytevector-s32-set!.

        * Added: bytevector-u16-native-ref, bytevector-s16-native-ref
               , bytevector-u16-native-set! and bytevector-s16-native-set!.

        * ByteVectorProcedures.cpp (scheme::bytevectorU16RefEx): Added bytevector-u16-ref.

2008-10-15  higepon  <higepon@users.sourceforge.jp>

        * ByteVectorProcedures.cpp (bytevectorEqPEx): Added bytevector=?.
                                   (bytevectorFillDEx): Added bytevector-fill!.
                                   (bytevectorCopyDEx): Added bytevector-copy!.