@@ -34,7 +34,7 @@ ProcedureMacro.h                                                  \
 BuiltinSymbols.cpp                                                \
 Builtin.h                                                         \
 Closure.h                     Closure.cpp                         \
-freeproc.h                    freeproc.cpp                        \
+UtilityProcedures.h           UtilityProcedures.cpp               \
 reader.h                      reader.cpp                          \
 scheme.h                      scheme.cpp                          \
 Regexp.h                      Regexp.cpp                          \
